Mon Mar  7 20:49:12 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c (proc_getmaxgroups, proc_setmaxgroups): refrect
	  platform maxgroups limitation by default instead hardcoded 65536.

Mon Mar  7 17:13:00 2011  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* gc.c (rb_gc_set_params): allow GC parameter configuration by
	  environment variables.  based on a patch from funny-falcon at
	  https://gist.github.com/856296, but honors safe level.

Mon Mar  7 09:05:18 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c: NUM2RLIM is defined but no getrlimit and setrlimit on
	  mingw.

Mon Mar  7 08:38:14 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/date/date_core.c (DateTimeData): should not use bare 'long long'
	  and 'long double', which are not defined by C89.

	* ext/date/date_core.c (dt_lite_plus): get rid of overflow at casting
	  down double to integer.

Mon Mar  7 00:21:11 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c (proc_getgroups): get rid of maxgroups dependency.
	  ngroups can be calculated dynamically.

Sun Mar  6 23:45:40 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* configure.in: rlim_t use standard RUBY_REPLACE_TYPE mechanism.

Sun Mar  6 23:26:07 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c (proc_setmaxgroups): added negative value check.
	  This was suggested by Daniel Berger. Thanks Daniel!
	  [ruby-core:35426][Bug#4467]

Sun Mar  6 23:18:23 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* process.c (maxgroups, proc_setmaxgroups): increase max groups
	  limitation up to 65536.

Sun Mar  6 22:20:59 2011  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_pkey_ec.c: parenthesize macro arguments.

Sun Mar  6 21:49:04 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* sample/list.rb (MyElem#initialize): initialize @head
	  explicitely. Otherwise -W2 option makes following warning.
	  "warning: instance variable @head not initialized".