@@ -1,3 +1,8 @@
+Mon Mar  7 21:31:38 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
+
+	* process.c (proc_setgroups): replace getgrnam() with getgrnam_r()
+	  because getgrnam() isn't thread safe.
+
 Mon Mar  7 20:49:12 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
 
 	* process.c (proc_getmaxgroups, proc_setmaxgroups): refrect
